--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -155,3 +155,9 @@ bar {
         status_command i3status
         tray_output primary
 }
+
+
+
+## Ryan's Stuff
+
+bindsym $mod+Shift+b exec ~/.scripts/toggle-redshift.sh
