--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "vim/plugins/vim-tmux-navigator"]
 	path = vim/plugins/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
-[submodule "vim/plugins/syntastic"]
-	path = vim/plugins/syntastic
-	url = https://github.com/vim-syntastic/syntastic.git
 [submodule "vim/plugins/vim-pathogen"]
 	path = vim/plugin_managers/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
@@ -40,3 +37,6 @@
 [submodule "vim/plugins/vim-dasht"]
 	path = vim/plugins/vim-dasht
 	url = https://github.com/sunaku/vim-dasht.git
+[submodule "vim/syntastic"]
+	path = vim/plugins/syntastic
+	url = https://github.com/vim-syntastic/syntastic.git
