--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -152,18 +152,27 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
-        tray_output primary
+    #status_command i3status
+    #tray_output primary
+    #mode hide
+    #hidden_state hide
+    #modifier Mod1
 }
 
 
 
 ## Ryan's Stuff
 
-## Auto (On Load)
+# i3-gaps stuff :)
+for_window [class="^.*"] border pixel 2
+gaps inner 15
+gaps outer 10
+smart_borders on
+new_window none
+
+# Randomly pick a background
 exec --no-startup-id feh --recursive --randomize --bg-fill ~/.wallpapers/ 
 
-## Manual
 # Turn on/off the bluelight filter
 bindsym $mod+Shift+b exec ~/.scripts/toggle-redshift.sh
 
@@ -173,4 +182,17 @@ bindsym $mod+bracketleft workspace prev
 
 # Kill the workspace
 bindsym $mod+Control+Shift+k focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, focus parent, kill
+
+# Polybar
+exec_always --no-startup-id killall i3bar && sleep 1
+exec_always --no-startup-id ~/.config/polybar/launch.sh
+
+# Wallpaper 
+exec_always --no-startup-id feh --recursive --randomize --bg-fill ~/.wallpapers/
+
+# When HDMI-1 is connected
+exec_always --no-startup-id xrandr --output HDMI-1 --auto --right-of eDP-1
+
+# Start compton 
+exec_always --no-startup-id compton --config ~/.compton_config -b 
 
