--- a/dotfiles/.config/polybar/config
+++ b/dotfiles/.config/polybar/config
@@ -1,37 +1,13 @@
 ;*************  
 ;   TOP BAR
 ;*************  
-[bar/top]
-;monitor = eDP-1
-monitor = HDMI-1
-width = 100%
-height = 25
-
+[colors]
 background = #44000000
-foreground = #ccffffff
+background-alt = #444
+foreground = #ccffffff 
 
-line-color = ${bar/bottom.background}
-line-size = 16
-
-spacing = 4
-padding-right = 5
-module-margin = 4
-
-font-0 = NotoSans-Regular:size=8;-1
-font-1 = MaterialIcons:size=10;0
-font-2 = Termsynu:size=8:antialias=false;-2
-font-3 = FontAwesome:size=10;0
-
-modules-left = powermenu 
-modules-right = battery date wireless-network 
-
-tray-position = right
-;tray-padding = 2 
-wm-restack = i3
-override-redirect = true
-
-[bar/bottom]
-monitor = HDMI-1
+[bar/lapbottom]
+monitor = eDP-1
 bottom = true
 width = 100%
 height = 27
@@ -54,8 +30,154 @@ module-margin-right = 6
 ;font-4 = MaterialIcons:size=10;-1
 ;font-5 = Termsynu:size=8:antialias=false;0
 
-modules-left = bspwm
+modules-left = i3
 modules-right = cpu memory
+ 
+
+[bar/laptop]
+;monitor = HDMI-1
+width = 100%
+height = 25
+
+background = ${colors.background}
+background-alt = ${colors.background-alt}
+foreground = ${colors.foreground}
+
+line-color = ${bar/bottom.background}
+line-size = 16
+
+spacing = 4
+padding-right = 5
+module-margin = 4
+
+font-0 = NotoSans-Regular:size=8;-1
+font-1 = MaterialIcons:size=10;0
+font-2 = Termsynu:size=8:antialias=false;-2
+font-3 = FontAwesome:size=10;0
+
+modules-left = powermenu 
+modules-right = battery date wireless-network 
+
+tray-position = right
+;tray-padding = 2 
+wm-restack = i3
+override-redirect = true 
+
+[bar/top]
+monitor = HDMI-1
+top=true
+width = 100%
+height = 25
+
+background = ${colors.background}
+background-alt = ${colors.background-alt}
+foreground = ${colors.foreground}
+
+line-color = ${bar/bottom.background}
+line-size = 16
+
+spacing = 5
+padding-right = 5
+module-margin = 2
+
+font-0 = NotoSans-Regular:size=8;-1
+font-1 = MaterialIcons:size=10;0
+font-2 = Termsynu:size=8:antialias=false;-2
+font-3 = FontAwesome:size=10;0
+
+modules-left = powermenu 
+modules-right = battery date wireless-network 
+
+tray-position = right
+;tray-padding = 2 
+wm-restack = i3
+;override-redirect = true
+
+[bar/bottom]
+monitor = HDMI-1
+bottom = true
+width = 100%
+height = 27
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-color = ${colors.background}
+line-size = 0
+
+spacing = 3
+padding-right = 4
+module-margin-left = 0
+module-margin-right = 6
+
+modules-left = i3
+modules-right = cpu memory
+
+[module/i3]
+type = internal/i3
+format = <label-state> <label-mode>
+index-sort = true
+wrapping-scroll = false
+
+; Only show workspaces on the same output as the bar
+pin-workspaces = true
+
+label-mode-padding = 2
+label-mode-foreground = ${bar/top.foreground}
+label-mode-background = ${bar/top.background}
+
+; focused = Active workspace on focused monitor
+;label-focused = %index%
+label-focused = %name%
+label-focused-background = ${bar/top.background-alt}
+;label-focused-foreground = ${bar/top.background-alt}
+;label-focused-underline = ${bar/top.background-alt}
+label-focused-padding = 3
+label-focused-font = 4
+
+;; unfocused = Inactive workspace on any monitor
+label-unfocused = %name%
+label-unfocused-padding = 3
+label-unfocused-font = 4
+
+;; visible = Active workspace on unfocused monitor
+label-visible = %name%
+label-visible-background = ${colors.background-alt}
+;label-visible-underline = ${colors.random}
+label-visible-padding = 3
+label-visible-font = 4
+;
+;; urgent = Workspace with urgency hint set
+;label-urgent = %name%
+;label-urgent-background = ${module/bspwm.label-urgent-background}
+;label-urgent-padding = ${module/bspwm.label-urgent-padding}
+;
+; Separator in between workspaces
+; label-separator = |
+
+[module/bspwm]
+type = internal/bspwm
+
+label-focused = %index%
+label-focused-background = ${bar/top.background-alt}
+label-focused-underline= ${colors.primary}
+label-focused-padding = 3
+
+label-occupied = %index%
+label-occupied-padding = 3
+
+label-urgent = %index%!
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 3
+
+label-empty = %index%
+label-empty-foreground = ${colors.foreground-alt}
+label-empty-padding = 3
+
+; Separator in between workspaces
+; label-separator = |
+ 
+
 
 [module/backlight]
 type = internal/xbacklight
@@ -108,75 +230,8 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 750
 
-[module/bspwm]
-type = internal/bspwm
 
-ws-icon-0 = term;
-ws-icon-1 = web;
-ws-icon-2 = code;
-ws-icon-3 = music;
-ws-icon-4 = irssi;
-ws-icon-default = 
 
-format = <label-state> <label-mode>
-
-label-dimmed-underline = ${BAR.background}
-
-label-active = %icon%
-label-active-foreground = #fff
-label-active-background = #773f3f3f
-label-active-underline = #c9665e
-label-active-font = 4
-label-active-padding = 4
-
-label-occupied = %icon%
-label-occupied-foreground = #dd
-label-occupied-underline = #666
-label-occupied-font = 4
-label-occupied-padding = 4
-
-label-urgent = %icon%
-label-urgent-foreground = #000000
-label-urgent-background = #bd2c40
-label-urgent-underline = #9b0a20
-label-urgent-font = 4
-label-urgent-padding = 4
-
-label-empty = %icon%
-label-empty-foreground = #55
-label-empty-font = 4
-label-empty-padding = 4
-
-label-monocle = 
-label-monocle-underline = ${module/bspwm.label-active-underline}
-label-monocle-background = #33ffffff
-label-monocle-padding = 2
-
-label-locked = 
-label-locked-foreground = #bd2c40
-label-locked-underline = ${module/bspwm.label-monocle-underline}
-label-locked-padding = ${module/bspwm.label-monocle-padding}
-
-label-sticky = 
-label-sticky-foreground = #fba922
-label-sticky-underline = ${module/bspwm.label-monocle-underline}
-label-sticky-padding = ${module/bspwm.label-monocle-padding}
-
-label-private = 
-label-private-foreground = #bd2c40
-label-private-underline = ${module/bspwm.label-monocle-underline}
-label-private-padding = ${module/bspwm.label-monocle-padding}
-
-[module/bspwm-tmp]
-type = internal/bspwm
-format = <label-state>
-
-label-active = 
-label-active-padding = 1
-label-occupied = 
-label-occupied-padding = 1
-label-empty = 
-label-empty-padding = 1
 
 [module/cpu]
 type = internal/cpu
