--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -201,3 +201,7 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 # Insync (Google Drive Client)
 exec --no-startup-id ~/.scripts/enable-insync.sh
+
+
+# Enable shared clipboard
+exec --no-startup-id vmware-user
