--- a/dotfiles/.config/polybar/config
+++ b/dotfiles/.config/polybar/config
@@ -6,59 +6,8 @@ background = #44000000
 background-alt = #444
 foreground = #ccffffff 
 
-[bar/lapbottom]
-monitor = eDP-1
-bottom = true
-width = 100%
-height = 27
-
-background = ${bar/top.background}
-foreground = ${bar/top.foreground}
-
-line-color = ${bar/top.background}
-line-size = 2
-
-spacing = 3
-padding-right = 4
-module-margin-left = 0
-module-margin-right = 6
-
-
-modules-left = i3
-modules-right = cpu memory
- 
-
-[bar/laptop]
-;monitor = HDMI-1
-width = 100%
-height = 25
-
-background = ${colors.background}
-background-alt = ${colors.background-alt}
-foreground = ${colors.foreground}
-
-line-color = ${bar/bottom.background}
-line-size = 16
-
-spacing = 4
-padding-right = 5
-module-margin = 4
-
-font-0 = NotoSans-Regular:size=8;-1
-font-1 = MaterialIcons:size=10;0
-font-2 = Termsynu:size=8:antialias=false;-2
-font-3 = FontAwesome:size=10;0
-
-modules-left = powermenu 
-modules-right = battery date wireless-network 
-
-tray-position = right
-;tray-padding = 2 
-wm-restack = i3
-;override-redirect = true 
-
 [bar/top]
-monitor = HDMI-1
+monitor = Virtual1 
 top=true
 width = 100%
 height = 25
@@ -88,7 +37,7 @@ wm-restack = i3
 ;override-redirect = true
 
 [bar/bottom]
-monitor = HDMI-1
+monitor = Virtual1 
 bottom = true
 width = 100%
 height = 27
